# iko

./: .gitignore  AUTHORS  Makefile  Makefile.am  autogen.sh  configure.ac  vala-support
examples/: Makefile.am  linear-test-equation.i  parabola.i  step.i  stiff-pendulum.i
gee/: .gitignore  Makefile.am
icc/: Makefile  Makefile.am  icc.vala  vala-writer.vala
iko/: .gitignore  Makefile  Makefile.am  iko-array-access.vala  iko-array-type.vala  iko-array.vala  iko-binary-expression.vala  iko-block.vala  iko-class.vala  iko-context.vala  iko-data-symbol.vala  iko-data-type.vala  iko-derivative-method.vala  iko-equation.vala  iko-expression.vala  iko-field.vala  iko-float-literal.vala  iko-float-type.vala  iko-integer-literal.vala  iko-integer-type.vala  iko-klass.vala  iko-literal.vala  iko-member-access.vala  iko-member-resolver.vala  iko-member.vala  iko-method-call.vala  iko-method.vala  iko-model.vala  iko-namespace.vala  iko-node.vala  iko-parameter.vala  iko-parser.vala  iko-real-type.vala  iko-report.vala  iko-scanner.vala  iko-scope.vala  iko-source-file.vala  iko-source-location.vala  iko-source-reference.vala  iko-square-root-method.vala  (+13 more)
ikoast/: .gitignore  Makefile  Makefile.am  iko-ast-add-negatives.vala  iko-ast-additive-expression.vala  iko-ast-arithmetic-expression.vala  iko-ast-binary-expression.vala  iko-ast-collect-symbols.vala  iko-ast-collect-terms.vala  iko-ast-constant.vala  iko-ast-data-symbol.vala  iko-ast-data-type.vala  iko-ast-derivative-method.vala  iko-ast-derivative-solver.vala  iko-ast-division-expression.vala  iko-ast-equality-expression.vala  iko-ast-expand-symbols.vala  iko-ast-expand-terms.vala  iko-ast-expression-transformer.vala  iko-ast-expression.vala  iko-ast-float-literal.vala  iko-ast-float-type.vala  iko-ast-fold-constants.vala  iko-ast-generator.vala  iko-ast-independent-variable.vala  iko-ast-integer-literal.vala  iko-ast-level-operators.vala  iko-ast-literal.vala  iko-ast-math.vala  iko-ast-matrix-expression.vala  iko-ast-matrix.vala  iko-ast-method-call.vala  iko-ast-method.vala  iko-ast-multi-expression.vala  iko-ast-multiplicative-expression.vala  iko-ast-negative-expression.vala  iko-ast-node.vala  iko-ast-operator.vala  iko-ast-power-expression.vala  iko-ast-real-type.vala  (+14 more)
ikoc/: .gitignore  Makefile  Makefile.am  ikoc.vala
ikocas/: Makefile  Makefile.am  gi.vapi  iko-cas-algebraic-expression.vala  iko-cas-assignment.vala  iko-cas-atomic-expression.vala  iko-cas-boolean.vala  iko-cas-compound-expression.vala  iko-cas-constant.vala  iko-cas-equality.vala  iko-cas-error-statement.vala  iko-cas-error.vala  iko-cas-expression.vala  iko-cas-factorial.vala  iko-cas-for-statement.vala  iko-cas-foreach-statement.vala  iko-cas-fraction.vala  iko-cas-function-call.vala  iko-cas-function.vala  iko-cas-if-statement.vala  iko-cas-integer.vala  iko-cas-kind.vala  iko-cas-linked-list.vala  iko-cas-list.vala  iko-cas-namespace.vala  iko-cas-node.vala  iko-cas-operator.vala  iko-cas-output.vala  iko-cas-parser.vala  iko-cas-polish.vala  iko-cas-power.vala  iko-cas-product.vala  iko-cas-real.vala  iko-cas-return-statement.vala  iko-cas-scanner.vala  iko-cas-singletons.vala  iko-cas-source-file.vala  iko-cas-source-location.vala  iko-cas-source-reference.vala  iko-cas-statement.vala  (+11 more)
ikocaslib/: .gitignore  Makefile  Makefile.am  iko-cas-lib-algebraic-number-field.ic  iko-cas-lib-basic-algebraic-expression-ic.ic  iko-cas-lib-basic-algebraic-expression.vala  iko-cas-lib-boolean.vala  iko-cas-lib-general-polynomial-expression.ic  iko-cas-lib-integer.vala  iko-cas-lib-multivariate-polynomial-expression.ic  iko-cas-lib-platform.ic  iko-cas-lib-rational-number-expression.vala  iko-cas-lib-set.vala  iko-cas-lib.vala  ikocaslib-1.0.typelib.h  ikocaslib-1.0.typelib.vapi
ikovalacode/: .gitignore  Makefile  Makefile.am  iko-valacode-generator.vala  iko-valacode-writer.vala
make/: build.mk  c-source.mk  ld.mk  vala-source.mk
test/: .gitignore  Makefile  Makefile.am  algebra.i  calc.vala  icas.vala  ish.vala  simplify.i  test-addition.vala  test-algebra.vala  test-algebraic.vala  test-big-number.vala  test-common.vala  test-constant-folding.vala  test-multiplication.vala  test-multivariate-polynomial.vala  test-power.vala  test-simplify.vala  transformer.vala
util/: Makefile.am  headerify  ltmassif
vapi/: Makefile.am  gi.h  gi.vapi  gmp.vapi
