CLEANFILES = *~

EXTRA_DIST = \
	autogen.sh

MAINTAINERCLEANFILES = \
	$(srcdir)/aclocal.m4 \
	$(srcdir)/build/compile \
	$(srcdir)/build/config.guess \
	$(srcdir)/build/config.sub \
	$(srcdir)/build/depcomp \
	$(srcdir)/build/install-sh \
	$(srcdir)/build/ltmain.sh \
	$(srcdir)/build/missing

SUBDIRS = \
	iko \
	ikocas \
	ikoast \
	ikovalacode \
	ikoc \
	test \
	examples \
	util

